Reduce size of download message to prevent overflow

--- a/app/styles/_recipe.sass
+++ b/app/styles/_recipe.sass
@@ -21,7 +21,7 @@
   bottom: 0
   color: $nav-bg
   display: none
-  font-size: 50px
+  font-size: 30px
   height: 100%
   left: 0
   opacity: 0
