--- a/public/bundle.css
+++ b/public/bundle.css
@@ -2522,7 +2522,7 @@ nav {
   bottom: 0;
   color: #F14723;
   display: none;
-  font-size: 50px;
+  font-size: 30px;
   height: 100%;
   left: 0;
   opacity: 0;
